# Shortify

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: publish-image.yml
shortify/app/: main.py
shortify/app/admin/: deps.py  router.py
shortify/app/api/: __init__.py  docs.py  redirect.py
shortify/app/api/v1/: __init__.py  deps.py
shortify/app/api/v1/endpoints/: auth.py  urls.py  users.py
shortify/app/core/: config.py  logging.py  security.py
shortify/app/middlewares/: correlation.py
shortify/app/models/: __init__.py  url.py  user.py
shortify/app/schemas/: __init__.py  error.py  pagination.py  token.py  url.py  user.py
shortify/app/templates/: 404.html
shortify/app/templates/admin/: base.html  dashboard.html  login.html  totp_setup.html  url_detail.html  urls.html  users.html
shortify/app/utils/: cbv.py  pagination.py  types.py
